[package]
name = "twilight"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
async-trait = "0.1.64"
bytemuck = { version = "1.13.0", features = ["derive"] }
capnp = "0.16.0"
cfg-if = "1.0.0"
cookie = "0.17.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
flatbuffers = "23.1.21"
futures-util = "0.3.26"
hyper = { version = "0.14.24", features = ["http1", "server", "client", "runtime"] }
hyper-tungstenite = "0.9.0"
parking_lot = "0.12.1"
pollster = "0.3.0"
rand = "0.8.5"
regex = "1.7.1"
rustc-hash = "1.1.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
turbojpeg = "0.5.2"
ultraviolet = { version = "0.9.0", features = [ "int", "bytemuck" ] }
url = "2.3.1"
winit = "0.28.1"
wgpu = "0.15.0"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
]

[profile.dev]
opt-level = 1
