[package]
name = "twilight"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.2"
actix-web = { version = "4.4.1", default-features = false, features = [
    "macros",
] }
actix-web-actors = "4.2.0"
anyhow = { version = "1.0.68", features = ["backtrace"] }
async-trait = "0.1.64"
bytemuck = { version = "1.13.0", features = [
    "derive",
    "extern_crate_std",
    "zeroable_maybe_uninit",
    "min_const_generics",
] }
bytes = "1.5.0"
cfg-if = "1.0.0"
clap = { version = "4.2.1", features = ["derive"] }
cookie = "0.18.0"
env_logger = "0.11.0"
fastwebsockets = "0.6.0"
flatbuffers = "23.1.21"
futures-util = "0.3.26"
http-body-util = "0.1.0"
hyper = { version = "1.0.0", features = ["http1"] }
jpeg-encoder = { version = "0.6.0", features = ["simd"] }
lazy_static = "1.4.0"
log = "0.4.17"
parking_lot = "0.12.1"
pollster = "0.3.0"
rand = "0.8.5"
regex = "1.7.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
smallvec = { version = "1.13.1", features = [
    "union",
    "const_generics",
    "serde",
] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"
wgpu = "0.19.0"
winit = "0.29.10"
zune-jpeg = "0.4.11"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
]

[profile.dev.package."*"]
opt-level = 2
